tests/wpt/tests/third_party/test262/test/language/expressions/assignmenttargettype/direct-relationalexpression-greater-than-shiftexpression-2.js
// This file was procedurally generated from the following sources:
// - src/assignment-target-type/relationalexpression-greater-than-shiftexpression-2.case
// - src/assignment-target-type/invalid/direct.template
/*---
description: Static Semantics AssignmentTargetType, Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment

    RelationalExpression > ShiftExpression
    Static Semantics AssignmentTargetType, Return invalid.

---*/

$DONOTEVALUATE();

true > false = 1;
